--- a/views/layout.slim
+++ b/views/layout.slim
@@ -17,6 +17,7 @@ html
 
     /vendored libraries (TODO: minify and move to CDN)
     script src="/vendor/js-emoji/emoji.js" type='text/javascript'
+    script src="/vendor/twitter-text/pkg/twitter-text-1.7.0.min.js" type='text/javascript'
 
     /actual application stuff here
     link href='/assets/main.css' rel='stylesheet'
