--- a/views/main.scss
+++ b/views/main.scss
@@ -72,13 +72,44 @@
   text-decoration: none;
 }
 .new {
-  @include animation(highlight_content 0.75s ease-out)
+  @include animation(highlight_content 0.75s ease-out);
 }
 .styled_tweet strong {
   color: #555;
 }
 .styled_tweet .intents {
   // margin-left: 20px;
+}
+.avatar {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  margin: 0 auto;
+  background-repeat: no-repeat;
+  background-color: lightgrey;
+  vertical-align: middle;
+
+  //use below to turn these off for now since bandwidth of loading images is too extreme!
+  // background-image: none !important;
+  // display: none;
+}
+// use media queries to ensure the avatars dont load on mobile
+// need to set background-image to none !important otherwise browser loads in background anyhow
+@media (min-width:768px) and (max-width:979px) {
+  .avatar {
+    background-image: none !important;
+    display: none;
+  }
+}
+
+.fadein {
+  opacity: 1;
+  @include animation(fadein 0.75s);
+}
+@include keyframes(fadein) {
+  from {
+    opacity: 0;
+  }
 }
 .screen_name {
   font-size: smaller;
