make disabled avatars the default and add toggle

--- a/views/details.slim
+++ b/views/details.slim
@@ -27,7 +27,7 @@ div.container
           a.btn.btn-mini href="/api/details/#{@emoji_char.unified}"
             li.icon-code &nbsp;get details as json
 
-      section#tweets.span9
+      section#tweets.span9.disable-avatars
         h3
           a href="http://twitter.com" target="_blank"
             i.icon-twitter
