only do fadein effect when avatars enabled
also restructure css a bit

re issue #14

--- a/views/main.scss
+++ b/views/main.scss
@@ -1,3 +1,6 @@
+/***************************************
+ * convenience mixins to avoid browser prefixing mess
+ ***************************************/
 @mixin animation($animation) {
   -webkit-animation: $animation;
   -moz-animation: $animation;
@@ -19,6 +22,19 @@
   @keyframes $name { @content };
 }
 
+/***************************************
+ * generic transition keyframes
+ ***************************************/
+@include keyframes(fadein) {
+  from { opacity: 0; }
+}
+@include keyframes(highlight_content) {
+  from { background-color: #ffc; }
+}
+
+/***************************************
+ * related to the main display grid
+ ***************************************/
 .emoji_char {
   width: 100px;
   background-color: #eee;
@@ -56,6 +72,9 @@
   }
 }
 
+/***************************************
+ * stuff for how tweets appear in the detail views
+ ***************************************/
 .styled_tweet {
   color: gray;
   background-color: transparent;
@@ -71,15 +90,22 @@
   opacity: 0.4;
   text-decoration: none;
 }
-.new {
-  @include animation(highlight_content 0.75s ease-out);
-}
 .styled_tweet strong {
   color: #555;
 }
 .styled_tweet .intents {
   // margin-left: 20px;
 }
+
+.styled_tweet.new {
+  @include animation(highlight_content 0.75s ease-out);
+}
+#detailview:not(.disable-avatars) .styled_tweet.new .tweet-details,
+    #tweets:not(.disable-avatars) .styled_tweet.new .tweet-details {
+  opacity: 1;
+  @include animation(fadein 0.75s);
+}
+
 .avatar {
   display: inline-block;
   width: 24px;
@@ -94,8 +120,7 @@
   background-image: none !important;
   display: none !important;
 }
-
-// use media queries to ensure the avatars dont load on mobile
+// use media queries to ensure the avatars dont load on mobile phones no matter what
 // need to set background-image to none !important otherwise browser loads in background anyhow
 @media (min-width:768px) and (max-width:979px) {
   .avatar {
@@ -104,15 +129,6 @@
   }
 }
 
-.fadein {
-  opacity: 1;
-  @include animation(fadein 0.75s);
-}
-@include keyframes(fadein) {
-  from {
-    opacity: 0;
-  }
-}
 .intents {
   float: right;
   margin-right: 0.3em;
@@ -150,11 +166,6 @@ a.combo_name:hover .name {
 /* override default bootstrap blockquote to make slightly smaller */
 blockquote p {
   font-size: 16px;
-}
-@include keyframes(highlight_content) {
-  from {
-    background-color: #ffc;
-  }
 }
 
 .fake-close {
