--- a/views/layout.slim
+++ b/views/layout.slim
@@ -14,6 +14,7 @@ html
     script src='//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.3.1/jquery.cookie.min.js' type='text/javascript'
     script src='//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js' type='text/javascript'
     script src='//platform.twitter.com/widgets.js' type='text/javascript'
+    script src='//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.2.1/handlebars.min.js' type='text/javascript'
 
     /vendored libraries (TODO: minify and move to CDN)
     script src="/vendor/js-emoji/emoji.js" type='text/javascript'
@@ -86,11 +87,40 @@ html
       div.modal-footer
         span#byline.emojifont-restricted built with :heart: in nyc.  this is a <a href="http://rocketws.com" target="new">rocket workshop :rocket:</a> project.
 
-      coffee:
-        $ ->
-          $('a.brand').html emoji.replace_colons(':dizzy:') + ' emojitracker<small class="hidden-phone">: realtime emoji use on twitter</small>'
-          $('#aboutview #byline').html emoji.replace_colons( $('#aboutview #byline').html() )
-          $('#footline').html emoji.replace_colons( $('#footline').html() )
-          unhide_footer = -> $('#footer').show()
-          setTimeout unhide_footer, 1000
+    script#styled-tweet-template type='text/x-handlebars-template'
+      li class='styled_tweet {{is_new}}'
+        i.icon-li.icon-angle-right
+        blockquote.twitter-tweet
+          p.emojifont-restricted
+            | {{{prepared_tweet_text}}}
+          span.tweet-details
+            | &mdash;
+            span.avatar.img-circle style='background-image:url({{profile_image_url}});'
+            a.combo_name href='{{profile_url}}' target='_blank'
+              strong.name.emojifont-restricted
+                | {{{name}}}
+              span.screen_name
+                | @{{screen_name}}
+            span.timestamp
+              a href='{{url}}'
+                time.timeago datetime='{{created_at}}'
+                  | {{created_at}}
+            span.intents
+              a.icon href='https://twitter.com/intent/tweet?in_reply_to={{id}}'
+                i.icon-reply
+              | &nbsp;
+              a.icon href='https://twitter.com/intent/retweet?tweet_id={{id}}'
+                i.icon-retweet
+              | &nbsp;
+              a.icon href='https://twitter.com/intent/favorite?tweet_id={{id}}'
+                i.icon-star
+
+
+    coffee:
+      $ ->
+        $('a.brand').html emoji.replace_colons(':dizzy:') + ' emojitracker<small class="hidden-phone">: realtime emoji use on twitter</small>'
+        $('#aboutview #byline').html emoji.replace_colons( $('#aboutview #byline').html() )
+        $('#footline').html emoji.replace_colons( $('#footline').html() )
+        unhide_footer = -> $('#footer').show()
+        setTimeout unhide_footer, 1000
 
