cleaner way to override STREAM_SERVER
this should be application level, not controller scoped

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -1,5 +1,5 @@
 doctype html
-html data-stream-server="#{@override_stream_server}"
+html data-stream-server="#{STREAM_SERVER}"
   head
     meta charset="utf-8"
     title emojitracker: realtime emoji use on twitter
