dont freak out if useragent is null

--- a/views/stream_admin.slim
+++ b/views/stream_admin.slim
@@ -98,6 +98,7 @@ javascript:
 
 coffee:
   pickPlatformIcon = (agent) ->
+    return "globe" if !agent?
     return "apple" if agent.match(/Macintosh/)
     return "mobile-phone" if agent.match(/iPhone/)
     return "tablet" if agent.match(/iPad/)
