calculate age from created_at
this makes more sense to do, and moves towards our standardization

--- a/views/stream_admin.slim
+++ b/views/stream_admin.slim
@@ -104,7 +104,7 @@ coffee:
         remote_ip: client.client_ip
         icon: "icon-" + pickPlatformIcon(client.client_user_agent)
         tag: emoji.replace_unified tagRender(client.tag)
-        age: prettyAge client.age
+        age: prettyAge( Math.floor(Date.now() / 1000) - client.created_at )
         node: node
       }
       rendered_entry = Handlebars.templates.entry(context)
