use variants instead of emojifont-restricted

--- a/views/index.slim
+++ b/views/index.slim
@@ -7,7 +7,7 @@ div#detailview.modal.hide.fade.disable-avatars tabindex="-1" role="dialog" aria-
     button.close type="button" data-dismiss="modal" aria-hidden="true" title="close" &times;
     a#openbtn.close title="open in new tab"
       i.icon-external-link.fake-close
-    h3.emojifont-restricted EMOJI NAME
+    h3 EMOJI NAME
     div#requester.alert.alert-info.hidden nobody
     dl
       dt unified id
