add links to FAQ etc

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -80,7 +80,21 @@ html data-stream-server="#{STREAM_SERVER}"
         h3 about emojitracker
       div.modal-body
         p this is an experiment in realtime tracking of all emoji used on twitter.
-        h4 like it? spread the word!
+        h4 more info
+        ul
+          li
+            a href="https://medium.com/@mroth/how-i-built-emojitracker-179cfd8238ac"
+              | "how i built emojitracker"
+            | &nbsp;article <small>(for nerds)</small>
+          li
+            a href="https://github.com/mroth/emojitrack"
+              | source code
+            | &nbsp;<small>(for even bigger nerds)</small>
+          li
+            a href="https://github.com/mroth/emojitrack/wiki/FAQ"
+              | frequently asked questions
+            | &nbsp;<small>(for everyone)</small>
+        h4 like this project? help spread the word!
         p
           a.twitter-share-button href="https://twitter.com/share" data-lang="en" data-count="horizontal" data-related="rocketws,mroth" data-dnt="true" data-text="emojitracker: visualizing realtime emoji use on twitter" data-url="http://www.emojitracker.com/" Tweet
           a.twitter-follow-button href="https://twitter.com/emojitracker" data-show-count="false" data-show-screen-name="true" data-dnt="true" Follow @emojitracker
